CTAG cape audio out working (with "-N 0 -G 0"). Input broken, probably something to do with pointers in the PRU memory
modified i2s configuration to use 1 bit data delay

set ADC clocks to slave mode

fixed wrong tdm slot <-> channel mapping for ADCs with CTAG face2|4

Moved most of device tree overlay properties to base device tree.

Disabled analog i/o by default

More verbose if error occurs during SPI transmission.

Added test program for PRU interrupt

Extended pru test program (host interrupt channel mapping; system event channel mapping). McASP interrupt enable. During execution of Bela project and enabling McASP interrupt, Linux freezes. Can't halt PRU anymore (seems to be pending system event of McASP).

Renamed defines to distinguish between CTAG face2|4 and usual Bela codec (tlv).

Added McASP dump tool to log config registers.

Added flag to create annotated text file from PRU code for debugging.

updated PRU interrupt test

tested McASP system events (54 and 55) by manually triggering from the loader program (ARM side).

created own define for intc initalisation. All mappings from host side are logged now.

Moved uio PRU test program to own folder

updated INTC init definition.

updated PRU interrupt test according to PRU_timer2Interrupt

Changed PRU code to receive McASP interrupts (successfully tested)

updated PRU code to clear all system events before interrupts are enabled. otherwise PRU will immediatly halt after startup.

Enabled McASP receive and transmit start of frame interrupt

Added defines for PRU interrupt controller and PRU config register.

Added McASP functional clock and ARM interrupt controller configuration to initd script for CTAG face

Added verification to see which system event arrived via SECR registers.

Changed system event mapping 55 to channel 1 instead of 0.

Added counter to PRU test code for verification. Refactorings  of test code.

Added PRU interrupt controller initialisation to RT audio code.

Fixed status clearing in

--- a/resources/BELA-CTAG-00A0.dts
+++ b/resources/BELA-CTAG-00A0.dts
@@ -12,8 +12,8 @@
 	compatible = "ti,beaglebone", "ti,beaglebone-black", "ti,beaglebone-green";
 
 	/* identification */
-	part-number = "BB-SPIDEV-GPIO";
-	version = "00A0";
+	part-number = "BELA-CTAG";
+	version = "00A0", "A0";
 
 	/* state the resources this cape uses */
 	exclusive-use =
@@ -31,11 +31,11 @@
 		__overlay__ {
 			bb_spi_gpio_pins: pinmux_bb_spi_gpio_pins {
 				pinctrl-single,pins = <
-					0x0DC 0x37 	/* spi_sclk, 	MODE7 | INPUT_PULLUP | SPI_SCLK P8_32 */
-                    0x028 0x37	/* spi_miso, 	MODE7 | INPUT_PULLUP | SPI_MISO P8_14 */
-                    0x0D4 0x17	/* spi_mosi, 	MODE7 | OUTPUT_PULLUP | SPI_MOSI P8_33 */
-                    0x02C 0x17	/* spi_cs0, 	MODE7 | OUTPUT_PULLUP | SPI_CS0 P8_17 */
-					0x0D8 0x17	/* spi_cs1,		MODE7 | OUTPUT_PULLUP | SPI_CS1 P8_31 */
+					0x0DC 0x37 /* spi_sclk, 	MODE7 | INPUT_PULLUP | SPI_SCLK P8_32 */
+					0x028 0x37 /* spi_miso, 	MODE7 | INPUT_PULLUP | SPI_MISO P8_14 */
+					0x0D4 0x17 /* spi_mosi, 	MODE7 | OUTPUT_PULLUP | SPI_MOSI P8_33 */
+					0x02C 0x17 /* spi_cs0, 		MODE7 | OUTPUT_PULLUP | SPI_CS0 P8_17 */
+					0x0D8 0x17 /* spi_cs1,		MODE7 | OUTPUT_PULLUP | SPI_CS1 P8_31 */
 				>;
 			};
 		};
